@@ -1,62 +1,25 @@
 package edu.illinois.library.cantaloupe.image;
 
-import edu.illinois.library.cantaloupe.http.Reference;
 import edu.illinois.library.cantaloupe.util.Rational;
 
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.Arrays;
 import java.util.Map;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 /**
  * <p>Represents a scale constraint placed on an image. This is intended for
  * providing dynamic limited-resolution versions of images depending on
  * authorization status.</p>
  *
- * <p>A scale constraint can be thought of as a &quot;virtual resize&quot; of
- * a source image before any operations have been performed on it. In contrast
- * to a {@link edu.illinois.library.cantaloupe.operation.Scale}, the dimensions
- * of a scale-constrained image appear (to the client) to be the dimensions
+ * <p>A scale constraint can be thought of as a &quot;virtually&quot;
+ * downscaled variant of a source image before any operations have been
+ * performed on it. In contrast to a {@link
+ * edu.illinois.library.cantaloupe.operation.Scale}, the dimensions of a
+ * scale-constrained image appear (to the client) to be the dimensions
  * resulting from the constraint.</p>
  */
 public final class ScaleConstraint {
 
-    /**
-     * <p>Format of a scale constraint suffix appended to an identifier in a
-     * URI path component.</p>
-     *
-     * <p>N.B.: This must be kept in sync with {@link
-     * #toIdentifierSuffix()}.</p>
-     */
-    public static final Pattern IDENTIFIER_SUFFIX_PATTERN =
-            Pattern.compile("-(\\d+):(\\d+)\\b");
-
-    private Rational rational;
-
-    /**
-     * An identifier URI path component may contain a {@link
-     * #IDENTIFIER_SUFFIX_PATTERN scale constraint suffix}. If so, this method
-     * will parse it and return an instance reflecting it.
-     *
-     * @param pathComponent Identifier path component, not URI-decoded.
-     * @return              New instance, or {@literal null} if the given path
-     *                      component does not contain a scale constraint
-     *                      suffix.
-     */
-    public static ScaleConstraint fromIdentifierPathComponent(String pathComponent) {
-        if (pathComponent != null) {
-            final String decodedComponent = Reference.decode(pathComponent);
-            final Matcher matcher =
-                    IDENTIFIER_SUFFIX_PATTERN.matcher(decodedComponent);
-            if (matcher.find() && matcher.groupCount() == 2) {
-                return new ScaleConstraint(
-                        Long.parseLong(matcher.group(1)),
-                        Long.parseLong(matcher.group(2)));
-            }
-        }
-        return null;
-    }
+    private final Rational rational;
 
     /**
      * @param numerator   Scale numerator.
@@ -130,24 +93,17 @@ public final class ScaleConstraint {
 
     @Override
     public int hashCode() {
-        return toString().hashCode();
+        double[] codes = { rational.getNumerator(), rational.getDenominator() };
+        return Arrays.hashCode(codes);
     }
 
     /**
-     * N.B.: This must be kept in sync with {@link #IDENTIFIER_SUFFIX_PATTERN}.
-     */
-    public String toIdentifierSuffix() {
-        return "-" + rational.getNumerator() + ":" + rational.getDenominator();
-    }
-
-    /**
-     * @return Map with {@literal numerator} and {@literal denominator} keys.
+     * @return Map with {@code numerator} and {@code denominator} keys.
      */
     public Map<String,Long> toMap() {
-        final Map<String,Long> map = new HashMap<>();
-        map.put("numerator", rational.getNumerator());
-        map.put("denominator", rational.getDenominator());
-        return Collections.unmodifiableMap(map);
+        return Map.of(
+                "numerator", rational.getNumerator(),
+                "denominator", rational.getDenominator());
     }
 
     @Override
