@@ -1,6 +1,12 @@
 package edu.illinois.library.cantaloupe.processor.codec;
 
 import edu.illinois.library.cantaloupe.image.Format;
+import edu.illinois.library.cantaloupe.processor.codec.bmp.BMPImageReader;
+import edu.illinois.library.cantaloupe.processor.codec.gif.GIFImageReader;
+import edu.illinois.library.cantaloupe.processor.codec.jpeg.JPEGImageReader;
+import edu.illinois.library.cantaloupe.processor.codec.png.PNGImageReader;
+import edu.illinois.library.cantaloupe.processor.codec.tiff.TIFFImageReader;
+import edu.illinois.library.cantaloupe.processor.codec.xpm.XPMImageReader;
 import edu.illinois.library.cantaloupe.source.StreamFactory;
 import edu.illinois.library.cantaloupe.source.stream.ClosingMemoryCacheImageInputStream;
 
@@ -8,15 +14,17 @@ import javax.imageio.stream.ImageInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Set;
 
+/**
+ * Used for obtaining {@link ImageReader} instances.
+ */
 public final class ImageReaderFactory {
 
-    private static final Set<Format> SUPPORTED_FORMATS =
-            Collections.unmodifiableSet(EnumSet.of(Format.BMP,
-                    Format.GIF, Format.JPG, Format.PNG, Format.TIF, Format.RAFT, Format.CANTALOUPE));
+    private static final Set<Format> SUPPORTED_FORMATS = Set.of(
+            Format.get("bmp"), Format.get("gif"), Format.get("jpg"),
+            Format.get("png"), Format.get("tif"), Format.get("xpm"),
+            Format.get("raft"), Format.get("cantaloupe"));
 
     /**
      * @return Map of available output formats for all known source formats,
@@ -27,35 +35,35 @@ public final class ImageReaderFactory {
     }
 
     public ImageReader newImageReader(Format format) {
-        switch (format) {
-            case BMP:
-                return new BMPImageReader();
-            case GIF:
-                return new GIFImageReader();
-            case JPG:
-                return new JPEGImageReader();
-            case PNG:
-                return new PNGImageReader();
-            case TIF:
-                return new TIFFImageReader();
-            case RAFT:
-                return new RAFTImageReader();
-            case CANTALOUPE:
-                return new DelegatingImageReader();
-            default:
-                throw new IllegalArgumentException("Unsupported format: " + format);
+        if (Format.get("bmp").equals(format)) {
+            return new BMPImageReader();
+        } else if (Format.get("gif").equals(format)) {
+            return new GIFImageReader();
+        } else if (Format.get("jpg").equals(format)) {
+            return new JPEGImageReader();
+        } else if (Format.get("png").equals(format)) {
+            return new PNGImageReader();
+        } else if (Format.get("tif").equals(format)) {
+            return new TIFFImageReader();
+        } else if (Format.get("xpm").equals(format)) {
+            return new XPMImageReader();
+        } else if (Format.get("raft").equals(format)) {
+            return new RAFTImageReader();
+        } else if (Format.get("cantaloupe").equals(format)) {
+            return new DelegatingImageReader();
         }
+        throw new IllegalArgumentException("Unsupported format: " + format);
     }
 
     /**
      * Creates a reusable instance for reading from files.
      *
-     * @param sourceFile File to read from.
      * @param format     Format of the source image.
+     * @param sourceFile File to read from.
      * @throws IllegalArgumentException if the format is unsupported.
      */
-    public ImageReader newImageReader(Path sourceFile,
-                                      Format format) throws IOException {
+    public ImageReader newImageReader(Format format,
+                                      Path sourceFile) throws IOException {
         ImageReader reader = newImageReader(format);
         reader.setSource(sourceFile);
         return reader;
@@ -64,27 +72,27 @@ public final class ImageReaderFactory {
     /**
      * <p>Creates a non-reusable instance.</p>
      *
-     * <p>{@link #newImageReader(ImageInputStream, Format)} should be preferred
+     * <p>{@link #newImageReader(Format, ImageInputStream)} should be preferred
      * when a first-class {@link ImageInputStream} can be provided.</p>
      *
-     * @param inputStream Stream to read from.
      * @param format      Format of the source image.
+     * @param inputStream Stream to read from.
      * @throws IllegalArgumentException if the format is unsupported.
      */
-    public ImageReader newImageReader(InputStream inputStream,
-                                      Format format) throws IOException {
-        return newImageReader(new ClosingMemoryCacheImageInputStream(inputStream), format);
+    public ImageReader newImageReader(Format format,
+                                      InputStream inputStream) throws IOException {
+        return newImageReader(format, new ClosingMemoryCacheImageInputStream(inputStream));
     }
 
     /**
      * Creates a non-reusable instance.
      *
-     * @param inputStream Stream to read from.
      * @param format      Format of the source image.
+     * @param inputStream Stream to read from.
      * @throws IllegalArgumentException if the format is unsupported.
      */
-    public ImageReader newImageReader(ImageInputStream inputStream,
-                                      Format format) throws IOException {
+    public ImageReader newImageReader(Format format,
+                                      ImageInputStream inputStream) throws IOException {
         ImageReader reader = newImageReader(format);
         reader.setSource(inputStream);
         return reader;
@@ -93,12 +101,12 @@ public final class ImageReaderFactory {
     /**
      * Creates a reusable instance for reading from streams.
      *
+     * @param format        Format of the source image.
      * @param streamFactory Source of stream to read from.
-     * @param format       Format of the source image.
      * @throws IllegalArgumentException if the format is unsupported.
      */
-    public ImageReader newImageReader(StreamFactory streamFactory,
-                                      Format format) throws IOException {
+    public ImageReader newImageReader(Format format,
+                                      StreamFactory streamFactory) throws IOException {
         ImageReader reader = newImageReader(format);
         reader.setSource(streamFactory);
         return reader;
