@@ -1,15 +1,14 @@
 package edu.illinois.library.cantaloupe.config;
 
 import edu.illinois.library.cantaloupe.test.BaseTest;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.NoSuchElementException;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class ConfigurationProviderTest extends BaseTest {
 
@@ -19,14 +18,14 @@ public class ConfigurationProviderTest extends BaseTest {
     private Configuration config1 = new MapConfiguration();
     private Configuration config2 = new MapConfiguration();
 
-    @Before
-    public void setUp() {
-        instance = new ConfigurationProvider(
-                new ArrayList<>(Arrays.asList(config1, config2)));
+    @BeforeEach
+    public void setUp() throws Exception {
+        super.setUp();
+        instance = new ConfigurationProvider(List.of(config1, config2));
     }
 
     @Test
-    public void testClear() {
+    void testClear() {
         config1.setProperty("key", "value");
         config2.setProperty("key", "value");
 
@@ -37,7 +36,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testClearProperty() {
+    void testClearProperty() {
         config1.setProperty("key1", "value");
         config1.setProperty("key2", "value");
         config2.setProperty("key1", "value");
@@ -52,7 +51,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetBoolean1() {
+    void testGetBoolean1() {
         // true in config1
         config1.setProperty("key", true);
         assertTrue(instance.getBoolean("key"));
@@ -78,7 +77,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetBoolean2() {
+    void testGetBoolean2() {
         // true in config1
         config1.setProperty("key", true);
         assertTrue(instance.getBoolean("key", false));
@@ -95,7 +94,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetDouble1() {
+    void testGetDouble1() {
         // set in config1
         config1.setProperty("key", 1.0);
         assertEquals(1.0, instance.getDouble("key"), DELTA);
@@ -117,7 +116,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetDouble2() {
+    void testGetDouble2() {
         // set in config1
         config1.setProperty("key", 1.0);
         assertEquals(1.0, instance.getDouble("key", 2.0), DELTA);
@@ -134,7 +133,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetFloat1() {
+    void testGetFloat1() {
         // set in config1
         config1.setProperty("key", 1f);
         assertEquals(1f, instance.getFloat("key"), DELTA);
@@ -156,7 +155,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetFloat2() {
+    void testGetFloat2() {
         // set in config1
         config1.setProperty("key", 1f);
         assertEquals(1f, instance.getFloat("key", 2f), DELTA);
@@ -173,7 +172,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetInt1() {
+    void testGetInt1() {
         // set in config1
         config1.setProperty("key", 1);
         assertEquals(1, instance.getInt("key"));
@@ -195,7 +194,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetInt2() {
+    void testGetInt2() {
         // set in config1
         config1.setProperty("key", 1);
         assertEquals(1, instance.getInt("key", 2), DELTA);
@@ -212,7 +211,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetKeys() {
+    void testGetKeys() {
         Iterator<String> it = instance.getKeys();
         int count = 0;
         while (it.hasNext()) {
@@ -233,7 +232,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetLong1() {
+    void testGetLong1() {
         // set in config1
         config1.setProperty("key", 1);
         assertEquals(1, instance.getLong("key"));
@@ -255,7 +254,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetLong2() {
+    void testGetLong2() {
         // set in config1
         config1.setProperty("key", 1);
         assertEquals(1, instance.getLong("key", 2), DELTA);
@@ -272,7 +271,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetProperty() {
+    void testGetProperty() {
         // set in config1
         config1.setProperty("key", "value");
         assertEquals("value", instance.getProperty("key"));
@@ -289,7 +288,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetString1() {
+    void testGetString1() {
         // set in config1
         config1.setProperty("key", "value");
         assertEquals("value", instance.getString("key"));
@@ -306,7 +305,7 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetString2() {
+    void testGetString2() {
         // set in config1
         config1.setProperty("key", "value");
         assertEquals("value", instance.getString("key", "default"));
@@ -323,22 +322,22 @@ public class ConfigurationProviderTest extends BaseTest {
     }
 
     @Test
-    public void testGetWrappedConfigurations() {
+    void testGetWrappedConfigurations() {
         assertEquals(2, instance.getWrappedConfigurations().size());
     }
 
     @Test
-    public void testReload() {
+    void testReload() {
         // TODO: write this
     }
 
     @Test
-    public void testSave() {
+    void testSave() {
         // TODO: write this
     }
 
     @Test
-    public void testSetProperty() {
+    void testSetProperty() {
         instance.setProperty("key", "cats");
         assertEquals("cats", config1.getProperty("key"));
         assertEquals("cats", config2.getProperty("key"));
