@@ -4,86 +4,90 @@ import edu.illinois.library.cantaloupe.config.Configuration;
 import edu.illinois.library.cantaloupe.config.Key;
 import edu.illinois.library.cantaloupe.image.Format;
 import edu.illinois.library.cantaloupe.test.BaseTest;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class ManualSelectionStrategyTest extends BaseTest {
 
     private ManualSelectionStrategy instance;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         super.setUp();
         instance = new ManualSelectionStrategy();
     }
 
     @Test
-    public void getPreferredProcessorsWhenOnlyAssignedIsSet() {
+    void getPreferredProcessorsWhenOnlyAssignedIsSet() {
         Configuration config = Configuration.getInstance();
         config.setProperty("processor.ManualSelectionStrategy.pdf",
                 PdfBoxProcessor.class.getSimpleName());
 
         List<Class<? extends Processor>> expected =
                 Collections.singletonList(PdfBoxProcessor.class);
-        assertEquals(expected, instance.getPreferredProcessors(Format.PDF));
+        assertEquals(expected, instance.getPreferredProcessors(Format.get("pdf")));
     }
 
     @Test
-    public void getPreferredProcessorsWhenOnlyFallbackIsSet() {
+    void getPreferredProcessorsWhenOnlyFallbackIsSet() {
         Configuration config = Configuration.getInstance();
-        config.setProperty(Key.PROCESSOR_FALLBACK, ImageMagickProcessor.class.getSimpleName());
+        config.setProperty(Key.PROCESSOR_FALLBACK, Java2dProcessor.class.getSimpleName());
 
         List<Class<? extends Processor>> expected =
-                Collections.singletonList(ImageMagickProcessor.class);
-        assertEquals(expected, instance.getPreferredProcessors(Format.GIF));
+                Collections.singletonList(Java2dProcessor.class);
+        assertEquals(expected, instance.getPreferredProcessors(Format.get("gif")));
     }
 
     @Test
-    public void getPreferredProcessorsWhenAssignedAndFallbackAreSet() {
+    void getPreferredProcessorsWhenAssignedAndFallbackAreSet() {
         Configuration config = Configuration.getInstance();
-        config.setProperty("processor.ManualSelectionStrategy.jpg",
-                GraphicsMagickProcessor.class.getSimpleName());
-        config.setProperty(Key.PROCESSOR_FALLBACK, ImageMagickProcessor.class.getSimpleName());
+        config.setProperty("processor.ManualSelectionStrategy.pdf",
+                PdfBoxProcessor.class.getSimpleName());
+        config.setProperty(Key.PROCESSOR_FALLBACK,
+                Java2dProcessor.class.getSimpleName());
 
-        List<Class<? extends Processor>> expected =
-                Arrays.asList(GraphicsMagickProcessor.class, ImageMagickProcessor.class);
-        assertEquals(expected, instance.getPreferredProcessors(Format.JPG));
+        List<Class<? extends Processor>> expected = List.of(
+                PdfBoxProcessor.class,
+                Java2dProcessor.class);
+        assertEquals(expected, instance.getPreferredProcessors(Format.get("pdf")));
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void getPreferredProcessorsWithIllegalAssignedName() {
+    @Test
+    void getPreferredProcessorsWithIllegalAssignedName() {
         Configuration config = Configuration.getInstance();
         config.setProperty("processor.ManualSelectionStrategy.jpg", "bogus");
-        instance.getPreferredProcessors(Format.JPG);
+        assertThrows(IllegalArgumentException.class,
+                () -> instance.getPreferredProcessors(Format.get("jpg")));
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void getPreferredProcessorsWithIllegalFallbackName() {
+    @Test
+    void getPreferredProcessorsWithIllegalFallbackName() {
         Configuration config = Configuration.getInstance();
         config.setProperty(Key.PROCESSOR_FALLBACK, "bogus");
-        instance.getPreferredProcessors(Format.JPG);
+        assertThrows(IllegalArgumentException.class,
+                () -> instance.getPreferredProcessors(Format.get("jpg")));
     }
 
     @Test
-    public void getPreferredProcessorsWithFullyQualifiedNames() {
+    void getPreferredProcessorsWithFullyQualifiedNames() {
         Configuration config = Configuration.getInstance();
         config.setProperty("processor.ManualSelectionStrategy.jpg",
-                GraphicsMagickProcessor.class.getName());
-        config.setProperty(Key.PROCESSOR_FALLBACK, ImageMagickProcessor.class.getName());
+                Java2dProcessor.class.getName());
+        config.setProperty(Key.PROCESSOR_FALLBACK, PdfBoxProcessor.class.getName());
 
-        List<Class<? extends Processor>> expected =
-                Arrays.asList(GraphicsMagickProcessor.class, ImageMagickProcessor.class);
-        assertEquals(expected, instance.getPreferredProcessors(Format.JPG));
+        List<Class<? extends Processor>> expected = List.of(
+                Java2dProcessor.class,
+                PdfBoxProcessor.class);
+        assertEquals(expected, instance.getPreferredProcessors(Format.get("jpg")));
     }
 
     @Test
-    public void testToString() {
+    void testToString() {
         assertEquals("ManualSelectionStrategy", instance.toString());
     }
 
