@@ -4,15 +4,12 @@ import edu.illinois.library.cantaloupe.Application;
 import edu.illinois.library.cantaloupe.http.Headers;
 import edu.illinois.library.cantaloupe.http.Method;
 import edu.illinois.library.cantaloupe.http.Response;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static edu.illinois.library.cantaloupe.test.Assert.HTTPAssert.*;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Functional test of LandingResource.
@@ -25,17 +22,17 @@ public class LandingResourceTest extends ResourceTest {
     }
 
     @Test
-    public void testGET() {
+    void testGET() {
         assertStatus(200, getHTTPURI(""));
     }
 
     @Test
-    public void testGETResponseBody() {
+    void testGETResponseBody() {
         assertRepresentationContains("<body", getHTTPURI(""));
     }
 
     @Test
-    public void testGETResponseHeaders() throws Exception {
+    void testGETResponseHeaders() throws Exception {
         client = newClient("");
         Response response = client.send();
         Headers headers = response.getHeaders();
@@ -45,8 +42,8 @@ public class LandingResourceTest extends ResourceTest {
         assertTrue(headers.getFirstValue("Cache-Control").contains("public"));
         assertTrue(headers.getFirstValue("Cache-Control").contains("max-age="));
         // Content-Type
-        assertEquals("text/html;charset=UTF-8",
-                headers.getFirstValue("Content-Type"));
+        assertTrue("text/html;charset=UTF-8".equalsIgnoreCase(
+                headers.getFirstValue("Content-Type")));
         // Date
         assertNotNull(headers.getFirstValue("Date"));
         // Server
@@ -57,15 +54,14 @@ public class LandingResourceTest extends ResourceTest {
     }
 
     @Test
-    public void testOPTIONS() throws Exception {
+    void testOPTIONS() throws Exception {
         client = newClient("");
         client.setMethod(Method.OPTIONS);
         Response response = client.send();
         assertEquals(204, response.getStatus());
 
         Headers headers = response.getHeaders();
-        List<String> methods =
-                Arrays.asList(headers.getFirstValue("Allow").split(","));
+        List<String> methods = List.of(headers.getFirstValue("Allow").split(","));
         assertEquals(2, methods.size());
         assertTrue(methods.contains("GET"));
         assertTrue(methods.contains("OPTIONS"));
