@@ -10,20 +10,19 @@ import edu.illinois.library.cantaloupe.http.Response;
 import edu.illinois.library.cantaloupe.image.MediaType;
 import edu.illinois.library.cantaloupe.resource.Route;
 import org.apache.commons.lang3.StringUtils;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * Functional test of TasksResource.
  */
 public class TasksResourceTest extends AbstractAPIResourceTest {
 
-    @Before
+    @BeforeEach
     @Override
     public void setUp() throws Exception {
         super.setUp();
@@ -48,14 +47,14 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
 
         Headers headers = response.getHeaders();
         List<String> methods =
-                Arrays.asList(StringUtils.split(headers.getFirstValue("Allow"), ", "));
+                List.of(StringUtils.split(headers.getFirstValue("Allow"), ", "));
         assertEquals(2, methods.size());
         assertTrue(methods.contains("POST"));
         assertTrue(methods.contains("OPTIONS"));
     }
 
     @Test
-    public void testPOSTWithIncorrectContentType() throws Exception {
+    void testPOSTWithIncorrectContentType() throws Exception {
         try {
             client.setEntity("{ \"verb\": \"PurgeCache\" }");
             client.setContentType(MediaType.TEXT_PLAIN);
@@ -66,7 +65,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithEmptyRequestBody() throws Exception {
+    void testPOSTWithEmptyRequestBody() throws Exception {
         try {
             client.setContentType(MediaType.APPLICATION_JSON);
             client.send();
@@ -76,7 +75,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithMalformedRequestBody() throws Exception {
+    void testPOSTWithMalformedRequestBody() throws Exception {
         try {
             client.setEntity("{ this is: invalid\" }");
             client.setContentType(MediaType.APPLICATION_JSON);
@@ -87,7 +86,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithMissingVerb() throws Exception {
+    void testPOSTWithMissingVerb() throws Exception {
         try {
             client.setEntity("{ \"cats\": \"yes\" }");
             client.setContentType(MediaType.APPLICATION_JSON);
@@ -98,7 +97,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithUnsupportedVerb() throws Exception {
+    void testPOSTWithUnsupportedVerb() throws Exception {
         try {
             client.setEntity("{ \"verb\": \"dogs\" }");
             client.setContentType(MediaType.APPLICATION_JSON);
@@ -109,18 +108,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithPurgeDelegateMethodInvocationCacheVerb()
-            throws Exception {
-        client.setEntity("{ \"verb\": \"PurgeDelegateMethodInvocationCache\" }");
-        client.setContentType(MediaType.APPLICATION_JSON);
-        Response response = client.send();
-
-        assertEquals(202, response.getStatus());
-        assertNotNull(response.getHeaders().getFirstValue("Location"));
-    }
-
-    @Test
-    public void testPOSTWithPurgeInfoCacheVerb() throws Exception {
+    void testPOSTWithPurgeInfoCacheVerb() throws Exception {
         client.setEntity("{ \"verb\": \"PurgeInfoCache\" }");
         client.setContentType(MediaType.APPLICATION_JSON);
         Response response = client.send();
@@ -130,7 +118,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithPurgeInvalidFromCacheVerb() throws Exception {
+    void testPOSTWithPurgeInvalidFromCacheVerb() throws Exception {
         client.setEntity("{ \"verb\": \"PurgeInvalidFromCache\" }");
         client.setContentType(MediaType.APPLICATION_JSON);
         Response response = client.send();
@@ -140,7 +128,7 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTWithPurgeItemFromCacheVerb() throws Exception {
+    void testPOSTWithPurgeItemFromCacheVerb() throws Exception {
         client.setEntity("{ \"verb\": \"PurgeItemFromCache\", \"identifier\": \"cats\" }");
         client.setContentType(MediaType.APPLICATION_JSON);
         Response response = client.send();
@@ -150,8 +138,8 @@ public class TasksResourceTest extends AbstractAPIResourceTest {
     }
 
     @Test
-    public void testPOSTResponseHeaders() throws Exception {
-        client.setEntity("{ \"verb\": \"PurgeDelegateMethodInvocationCache\" }");
+    void testPOSTResponseHeaders() throws Exception {
+        client.setEntity("{ \"verb\": \"PurgeInfoCache\" }");
         client.setContentType(MediaType.APPLICATION_JSON);
         Response response = client.send();
         Headers headers = response.getHeaders();
